# algo-practice

./: .gitignore  CMakeLists.txt  README.md  boyOrGirl.cpp  buyingFoods.cpp  finalPrices.cpp  main.cpp  romanToInteger.cpp  soldierAndBananas.cpp
codeforces/: boyOrGirl.cpp  buyingFoods.cpp  soldierAndBananas.cpp
leetcode/: heightChecker.cpp  removeElement.cpp
leetcode/easy/: finalPrices.cpp  heightChecker.cpp  removeElement.cpp
