cmake_minimum_required(VERSION 3.17)
project(FirstPractice)

set(CMAKE_CXX_STANDARD 20)

add_executable(FirstPractice main.cpp)
add_executable(boyOrGirl boyOrGirl.cpp)
add_executable(soldierAndBananas soldierAndBananas.cpp)
add_executable(buyingFoods buyingFoods.cpp)
add_executable(littleArtem cmake-build-debug/CMakeFiles/littleArtem.cpp)