cmake_minimum_required(VERSION 3.17)
project(FirstPractice)

set(CMAKE_CXX_STANDARD 20)

add_executable(boyOrGirl codeforces/boyOrGirl.cpp)
add_executable(soldierAndBananas codeforces/soldierAndBananas.cpp)
add_executable(buyingFoods codeforces/buyingFoods.cpp)


add_executable(romanToInteger romanToInteger.cpp)
add_executable(removeElement leetcode/removeElement.cpp)
add_executable(finalPrices finalPrices.cpp)